use 1rem(16px) body font-size on mobile (to prevent zoom in on form input focus), use 0.875rem (14px) on viewports >= 768px

--- a/src/Assets/less/basic/layout.less
+++ b/src/Assets/less/basic/layout.less
@@ -11,11 +11,15 @@ html, body {
 
 body {
   font-family: @font-os;
-  font-size: @font-size;
+  .rem(font-size, 16px);
   line-height: @line-height;
   color: @font-color;
   background-color: @body-bg-color;
   overflow: hidden;
+
+  @media only screen and (min-width: 768px) {
+    .rem(font-size, 14px);
+  }
 }
 
 nav {
@@ -78,7 +82,7 @@ b, strong {
 }
 
 .content--padding {
-  .rem(padding, 10px);
+  .rem(padding, 20px,10px,10px);
 }
 
 @media only screen and (min-width: 768px) {
